Cambios menores realizados

--- a/Agrupaciones_Musicales/AgrupacionesMusicales.html
+++ b/Agrupaciones_Musicales/AgrupacionesMusicales.html
@@ -13,10 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Fuentes -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!-- Libreria Lightbox para las galerias de imagenes -->
     <link rel="stylesheet" href="../lightbox/lightbox.css">
 </head>
@@ -248,8 +244,8 @@
     <section class="about" id="am">
         <div class="content">
             <div class="bandCarousel">
-                <a href="../Fotos/Banda de viento/6.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Banda de viento/6.jpg" class="mainPicture">
+                <a href="../Fotos/Academias/89.jpg" data-lightbox="models" data-title="">
+                    <img src="../Fotos/Academias/89.jpg" class="mainPicture">
                 </a>
             </div>
             <div class="text">
@@ -258,6 +254,10 @@
                     Academia para recibir conocimientos musicales por profesionales del área. Estas clases son gratuitas
                     y los maestros de música las brindan en su tiempo disponible. Los estudiantes aprenden a solfear,
                     desarrollan técnicas instrumentales y de interpretación.</P>
+            </div>
+            <h1 class="galleryH1">Galería</h1><i class="fa-light fa-trumpet"></i>
+            <div class="gallery" id="amGallery">
+                <video src="../Fotos/Academias/Marcha.mov" controls></video>
             </div>
         </div>
     </section>
