Mejoras a "Lideres espirituales"

--- a/Lideres_Espirituales/LideresEspirituales.html
+++ b/Lideres_Espirituales/LideresEspirituales.html
@@ -173,15 +173,21 @@
     <!-- Contenido Princial -->
 
     <div class="title">
-        <h1>Lideres Espirituales</h1>
+        <h1>Líderes Espirituales</h1>
     </div>
 
     <div class="mainContent">
 
         <div class="fotosProfetas">
-            <img src="./img/juanita-garcia-peraza.jpeg" id="Mita">
-            <img src="./img/teofilo-vargas-sein.jpeg" id="Aaron">
-            <img src="./img/rosinin-rodriguez-perez - 2.jpeg" id="Rosinin">
+            <div class="foto">
+                <img src="./img/juanita-garcia-peraza.jpeg" id="Mita">
+            </div>
+            <div class="foto">
+                <img src="./img/teofilo-vargas-sein.jpeg" id="Aaron">
+            </div>
+            <div class="foto">
+                <img src="./img/rosinin-rodriguez-perez - 2.jpeg" id="Rosinin">
+            </div>
         </div>
 
         <div class="bioProfetas">
