--- a/Lideres_Espirituales/LideresEspirituales.html
+++ b/Lideres_Espirituales/LideresEspirituales.html
@@ -451,7 +451,7 @@
                         </div>
                         <div class="right">
                             <div class="content">
-                                <img src="./img/lider-2/lider-2.10.jpeg" id="bio_2_Img_4" width="240" height="340">
+                                <img src="../Fotos/Lideres/91.jpg" id="bio_2_Img_4" width="240" height="340">
                             </div>
                         </div>
                     </div>
