Ultimos cambios antes de enviar para video de presentacion

--- a/Agrupaciones_Musicales/AgrupacionesMusicales.html
+++ b/Agrupaciones_Musicales/AgrupacionesMusicales.html
@@ -56,8 +56,7 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de
-                                            viento</a>
+                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de Mita</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#am">Academias
@@ -134,7 +133,7 @@
                                         <a href="#">Español</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#">English</a>
+                                        <a href="../Idiomas/Ingles/Lideres_Espirituales/LideresEspirituales.html">English</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="#">Italiano</a>
@@ -179,7 +178,7 @@
     <section class="about" id="bv">
         <div class="content">
             <div class="text">
-                <h1>Banda de viento</h1>
+                <h1>Banda de Mita</h1>
                 <h5>Fundada en 1956 </h5>
                 <P>La Banda de Mita de Puerto Rico está compuesta por 130 músicos. Se ha destacado en diversas
                     actividades gubernamentales, cívicas, culturales, sociales en y fuera del país. Ha representado a
@@ -188,46 +187,47 @@
                     ganado premios por su calidad de sonido, su formación y uniforme de gala.</P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/Banda de viento/3.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/3.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/3.jpg" class="mainPicture">
                 </a>
             </div>
             <h1 class="galleryH1">Galería</h1><i class="fa-light fa-trumpet"></i>
+            <div class="galleryInfo">Toca foto para ver más</div>
             <div class="gallery">
-                <a href="../Fotos/Banda de viento/1.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/1.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/1.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/9.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/9.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/9.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/4.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/4.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/4.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/10.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/10.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/10.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/7.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/7.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/7.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/2.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/2.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/2.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/5.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/5.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/5.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/6.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/6.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/6.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/8.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/8.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/8.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/11.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/11.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/11.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/12.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/12.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/12.jpg">
                 </a>
-                <a href="../Fotos/Banda de viento/17.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Banda de viento/17.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Banda de viento/17.jpg">
                 </a>
             </div>
@@ -244,7 +244,7 @@
     <section class="about" id="am">
         <div class="content">
             <div class="bandCarousel">
-                <a href="../Fotos/Academias/89.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Academias/89.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Academias/89.jpg" class="mainPicture">
                 </a>
             </div>
@@ -256,8 +256,17 @@
                     desarrollan técnicas instrumentales y de interpretación.</P>
             </div>
             <h1 class="galleryH1">Galería</h1><i class="fa-light fa-trumpet"></i>
+            <div class="galleryInfo">Toca foto para ver más</div>
             <div class="gallery" id="amGallery">
-                <video src="../Fotos/Academias/Marcha.mov" controls></video>
+                <a href="../Fotos/Academias/96.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Academias/96.jpg">
+                </a>
+                <a href="../Fotos/Academias/97.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Academias/97.jpg">
+                </a>
+                <a href="../Fotos/Academias/98.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Academias/98.jpg">
+                </a>
             </div>
         </div>
     </section>
@@ -278,7 +287,7 @@
                     alabanzas a Dios.</P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/Arpas/15.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Arpas/15.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Arpas/15.jpg" class="mainPicture">
                 </a>
             </div>
@@ -295,7 +304,7 @@
     <section class="about" id="ac">
         <div class="content">
             <div class="bandCarousel">
-                <a href="../Fotos/Cuerdas/16.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Cuerdas/16.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Cuerdas/16.jpg" class="mainPicture">
                 </a>
             </div>
@@ -309,11 +318,12 @@
                     salvación.</P>
             </div>
             <h1 class="galleryH1">Galería</h1>
+            <div class="galleryInfo">Toca foto para ver más</div>
             <div class="gallery">
-                <a href="../Fotos/Cuerdas/14.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Cuerdas/14.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Cuerdas/14.jpg">
                 </a>
-                <a href="../Fotos/Cuerdas/78.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Cuerdas/78.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Cuerdas/78.jpg">
                 </a>
             </div>
@@ -338,7 +348,7 @@
                     general. </P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/Coro/88.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Coro/88.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Coro/88.jpg" class="mainPicture">
                 </a>
             </div>
