--- a/Lideres_Espirituales/LideresEspirituales.html
+++ b/Lideres_Espirituales/LideresEspirituales.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrupaciones Musicales</title>
+    <title>Líderes espirituales</title>
     <link rel="shortcut icon" href="./img/logo.png" />
     <!-- Archico CSS principal -->
     <link rel="stylesheet" href="./LideresEspirituales.css">
@@ -36,7 +36,7 @@
                         </li>
                         <li class="nav-link" style="--i: .86s">
                             <a href="#"> Líderes espirituales <i class="fa-solid fa-caret-down"></i></a>
-                            <div class="dropdown">
+                            <div class="dropdown" id="LED">
                                 <ul>
                                     <li class="dropdown-link">
                                         <a href="../Lideres_Espirituales/LideresEspirituales.html">Juanita García Peraza</a>
@@ -56,8 +56,7 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de
-                                            viento</a>
+                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de Mita</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#am">Academias
@@ -346,6 +345,7 @@
                 Doctorado de Filosofía en Administración honoris causae.
                 </br></br>
                 </p>
+                <P class="bioAdvise">Toca las imágenes principales para ver las demás biografías.</P>
             </div>
             <div class="textBio2" id="tb2">
                 <div class="textInsideBio">
@@ -459,7 +459,7 @@
 
                 Promovió el desarrollo de las Bellas Artes con el establecimiento de academias musicales y bandas
                 alrededor de todo el mundo. Bajo su liderato se estableció la agrupación de arpas y la orquesta de
-                violines. Entre sus múltiples composiciones se destacan: <i>Mi encuentro con mita, Mita es la
+                violines. Entre sus múltiples composiciones se destacan: <i>Mi encuentro con Mita, Mita es la
                     verdadera aurora, ¡Cuánto amo yo tu ley!, Gracias te damos, Llamando con amor, Los cielos
                     cuentan tu gloria,</i> entre otras.
                 </br></br>
@@ -468,6 +468,7 @@
                 madre espiritual y líder de la Congregación.
                 </br></br>
                 </p>
+                <P class="bioAdvise">Toca las imágenes principales para ver las demás biografías.</P>
             </div>
             <div class="textBio3" id="tb3">
                 <div class="textInsideBio">
@@ -600,6 +601,7 @@
                 Congregación Mita y es el instrumento a través del cual oímos la voz de Dios.
                 </br></br>
                 </p>
+                <P class="bioAdvise">Toca las imágenes principales para ver las demás biografías.</P>
             </div>
         </div>
 
@@ -609,21 +611,21 @@
                     <a href="https://www.facebook.com/CongregacionMita" target="_blank">
                         <div class="button">
                             <div class="icon"><i class="fa-brands fa-facebook"></i></div>
-                            <span>Facebook</span>
+                            <span></span>
                         </div>
                     </a>
     
                     <a href="https://www.youtube.com/@CongregacionMitaInc/videos" target="_blank">
                         <div class="button">
                             <div class="icon"><i class="fa-brands fa-youtube"></i></div>
-                            <span>Youtube</span>
+                            <span></span>
                         </div>
                     </a>
     
                     <a href="#">
                         <div class="button">
                             <div class="icon"><i class="fa-solid fa-envelope"></i></div>
-                            <span>Contacto</span>
+                            <span></span>
                         </div>
                     </a>
                 </div>
