--- a/Niñez_y_Juventud/NiñezYJuventud.html
+++ b/Niñez_y_Juventud/NiñezYJuventud.html
@@ -56,8 +56,7 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de
-                                            viento</a>
+                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de Mita</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#am">Academias
@@ -176,6 +175,52 @@
         <h1>Niñez y Juventud</h1>
     </div>
 
+    <section class="about" id="c">
+        <div class="content">
+            <div class="bandCarousel">
+                <a href="../Fotos/Consejero/79.jpg"data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Consejero/79.jpg" id="imgConsejero">
+                </a>
+            </div>
+            <div class="text">
+                <h1>El Consejero (Escuela Biblica)</h1>
+                <h5>Fundado en 1956</h5>
+                <P> Fue establecido para que los niños reciban orientación espiritual, clases bíblicas, consejos sobre
+                    buen comportamiento y nociones sobre responsabilidades sociales y cívicas. Los maestros de El
+                    Consejero son hermanos fieles, de buen testimonio, con amplios conocimientos bíblicos y de la
+                    doctrina de nuestra Congregación.
+                </P>
+            </div>
+            <h1 class="galleryH1">Galería</h1>
+            <div class="galleryInfo">Toca foto para ver más</div>
+            <div class="gallery">
+                <a href="../Fotos/Consejero/80.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Consejero/80.jpg">
+                </a>
+                <a href="../Fotos/Consejero/81.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Consejero/81.jpg">
+                </a>
+                <a href="../Fotos/Consejero/82.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Consejero/82.jpg">
+                </a>
+                <a href="../Fotos/Consejero/83.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Consejero/83.jpg">
+                </a>
+                <a href="../Fotos/Consejero/84.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Consejero/84.jpg">
+                </a>
+            </div>
+            <div class="SMLinkContainer">
+                <a href="https://www.facebook.com/profile.php?id=100068637109256" target="_blank" class="SMLink"><i
+                        class="fa-brands fa-facebook"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <div class="divider-icon">
+        <p><img src="./img/logo.png" /></p>
+    </div>
+
     <section class="about" id="j">
         <div class="content">
             <div class="text">
@@ -190,69 +235,27 @@
                 </P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/Juventud/66.jpg"data-lightbox="models" data-title="">
+                <a href="../Fotos/Juventud/66.jpg"data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Juventud/66.jpg" >
                 </a>
             </div>
             <h1 class="galleryH1">Galería</h1>
+            <div class="galleryInfo">Toca foto para ver más</div>
             <div class="gallery" id="JuventudGal">
-                <a href="../Fotos/Juventud/67.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Juventud/67.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Juventud/67.jpg">
                 </a>
-                <a href="../Fotos/Juventud/68.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Juventud/68.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Juventud/68.jpg">
                 </a>
-                <a href="../Fotos/Juventud/69.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Juventud/69.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Juventud/69.jpg">
                 </a>
             </div>
         </div>
     </section>
 
-    <div class="divider-icon">
-        <p><img src="./img/logo.png" /></p>
-    </div>
-
-    <section class="about" id="c">
-        <div class="content">
-            <div class="bandCarousel">
-                <a href="../Fotos/Consejero/79.jpg"data-lightbox="models" data-title="">
-                    <img src="../Fotos/Consejero/79.jpg" id="imgConsejero">
-                </a>
-            </div>
-            <div class="text">
-                <h1>El Consejero (Escuela Biblica)</h1>
-                <h5>Fundado en 1956</h5>
-                <P> Fue establecido para que los niños reciban orientación espiritual, clases bíblicas, consejos sobre
-                    buen comportamiento y nociones sobre responsabilidades sociales y cívicas. Los maestros de El
-                    Consejero son hermanos fieles, de buen testimonio, con amplios conocimientos bíblicos y de la
-                    doctrina de nuestra Congregación.
-                </P>
-            </div>
-            <h1 class="galleryH1">Galería</h1>
-            <div class="gallery">
-                <a href="../Fotos/Consejero/80.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Consejero/80.jpg">
-                </a>
-                <a href="../Fotos/Consejero/81.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Consejero/81.jpg">
-                </a>
-                <a href="../Fotos/Consejero/82.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Consejero/82.jpg">
-                </a>
-                <a href="../Fotos/Consejero/83.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Consejero/83.jpg">
-                </a>
-                <a href="../Fotos/Consejero/84.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Consejero/84.jpg">
-                </a>
-            </div>
-            <div class="SMLinkContainer">
-                <a href="https://www.facebook.com/profile.php?id=100068637109256" target="_blank" class="SMLink"><i
-                        class="fa-brands fa-facebook"></i></a>
-            </div>
-        </div>
-    </section>
+    
 
     <!-- Footer -->
     <footer>
