--- a/Obra_Social/ObraSocial.html
+++ b/Obra_Social/ObraSocial.html
@@ -56,8 +56,7 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de
-                                            viento</a>
+                                        <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de Mita</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#am">Academias
@@ -188,19 +187,20 @@
                     intelectuales y de talentos de la Sociedad de Honor, entre otros.</P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/19.jpg"data-lightbox="models" data-title="">
+                <a href="../Fotos/19.jpg"data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/19.jpg">
                 </a>
             </div>
             <h1 class="galleryH1">Galería</h1>
+            <div class="galleryInfo">Toca foto para ver más</div>
             <div class="gallery">
-                <a href="../Fotos/Colegio/85.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Colegio/85.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Colegio/85.jpg">
                 </a>
-                <a href="../Fotos/Colegio/86.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Colegio/86.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Colegio/86.jpg">
                 </a>
-                <a href="../Fotos/Colegio/87.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Colegio/87.jpg" data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Colegio/87.jpg">
                 </a>
             </div>
@@ -217,7 +217,7 @@
     <section class="about" id="aboutEgida">
         <div class="content">
             <div class="bandCarousel">
-                <a href="../Fotos/20.jpg"data-lightbox="models" data-title="">
+                <a href="../Fotos/20.jpg"data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/20.jpg">
                 </a>
             </div>
@@ -253,7 +253,7 @@
                     Mita. Los servicios que ofrece a la comunidad en general son gratuitos.</P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/21.jpg"data-lightbox="models" data-title="">
+                <a href="../Fotos/21.jpg"data-lightbox="models" data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/21.jpg" id="imgOficina">
                 </a>
             </div>
