--- a/Cuerpos_Ministeriales/CuerposMinisteriales.html
+++ b/Cuerpos_Ministeriales/CuerposMinisteriales.html
@@ -39,13 +39,16 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="../Lideres_Espirituales/LideresEspirituales.html">Juanita García Peraza</a>
+                                        <a href="../Lideres_Espirituales/LideresEspirituales.html">Juanita García
+                                            Peraza</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="../Lideres_Espirituales/LideresEspirituales.html">Teófilo Vargas Seín</a>
+                                        <a href="../Lideres_Espirituales/LideresEspirituales.html">Teófilo Vargas
+                                            Seín</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="../Lideres_Espirituales/LideresEspirituales.html">Rosinín Rodríguez Pérez</a>
+                                        <a href="../Lideres_Espirituales/LideresEspirituales.html">Rosinín Rodríguez
+                                            Pérez</a>
                                     </li>
                                 </ul>
                             </div>
@@ -57,7 +60,7 @@
                                 <ul>
                                     <li class="dropdown-link">
                                         <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#bv">Banda de
-                                            viento</a>
+                                            Mita</a>
                                     </li>
                                     <li class="dropdown-link">
                                         <a href="../Agrupaciones_Musicales/AgrupacionesMusicales.html#am">Academias
@@ -99,7 +102,7 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Más de  nosotros <i class="fa-solid fa-caret-down i4"></i></a>
+                            <a href="#">Más de nosotros <i class="fa-solid fa-caret-down i4"></i></a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
@@ -179,39 +182,27 @@
     <section class="about" id="co">
         <div class="content">
             <div class="bandCarousel">
-                <a href="../Fotos/Obreros/65.jpg" data-lightbox="models" data-title="">
-                    <img src="../Fotos/Obreros/65.jpg" id="ObrerosMainPicture">
+                <a href="../Fotos/Obreros/95.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Obreros/95.jpg" id="ObrerosMainPicture">
                 </a>
             </div>
             <div class="text">
                 <h1>Cuerpo de Obreros</h1>
-                <P> Más de 300 hermanos y hermanas forman parte del Cuerpo de Guardas Voluntarios. Están debidamente
-                    uniformados y adiestrados para prestar servicio de vigilancia y mantener el orden en la comunidad.
-                    No utilizan ningún tipo de arma, ya que son servidores de paz. Además, tienen un cuartel y una
-                    patrulla que circula de noche y que se dedica a la supervisión de los puestos de vigilancia en el
-                    área donde la Congregación tiene sus dependencias. Trabajan en coordinación con la policía.</P>
-            </div>
-        </div>
-    </section>
+                <P id="parrafoObreros"> El obrero es el pastor o predicador que, por amor a las almas, lleva el mensaje de salvación y cuida
+                    de la vida espiritual de los feligreses. En la Congregación Mita, el Espíritu Santo de Dios usa el
+                    término «obrero» en alusión a las palabras de Jesucristo en el Evangelio según San Mateo, capítulo 9
+                    y versículos 37 y 38: «Entonces dice a sus discípulos: a la verdad la mies es mucha, mas los obreros
+                    pocos. Rogad, pues, al Señor de la mies, que envíe obreros a su mies». Los obreros se encargan de
+                    pregonar y difundir el mensaje divino basado en la Santa Biblia, organizar servicios religiosos,
+                    orarle a los enfermos, ayudar a los necesitados, visitar a los hermanos en sus hogares u hospitales,
+                    ofrecer servicios religiosos funerales, organizar retiros espirituales y cualquier otra labor
+                    inherente a su ministerio. Los obreros de nuestra Congregación no reciben salario por su labor
+                    ministerial, sino que la ejercen por amor. Además, contamos con cientos de diáconos y diaconisas, quienes ayudan a los obreros en las distintas
+                    congregaciones, colaboran en la visitas a los hospitales y hogares, asisten a los necesitados, hacen
+                    obras de caridad y ayudan en la organización de los servicios religiosos.
 
-    <div class="divider-icon">
-        <p><img src="./img/logo.png" /></p>
-    </div>
-
-    <section class="about" id="dd">
-        <div class="content">
-            <div class="text">
-                <h1>Diaconos y diaconisas</h1>
-                <P> Fue establecido para que los niños reciban orientación espiritual, clases bíblicas, consejos sobre
-                    buen comportamiento y nociones sobre responsabilidades sociales y cívicas. Los maestros de El
-                    Consejero son hermanos fieles, de buen testimonio, con amplios conocimientos bíblicos y de la
-                    doctrina de nuestra Congregación.
                 </P>
-            </div>
-            <div class="bandCarousel">
-                <a href="../Fotos/23.jpg"data-lightbox="models" data-title="">
-                    <img src="../Fotos/23.jpg" id="imgConsejero">
-                </a>
             </div>
         </div>
     </section>
@@ -223,19 +214,21 @@
     <section class="about" id="m">
         <div class="content">
             <div class="bandCarousel">
-                <a href="../Fotos/22.jpg"data-lightbox="models" data-title="">
-                    <img src="../Fotos/22.jpg">
+                <a href="../Fotos/Musicos/92.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
+                    <img src="../Fotos/Musicos/92.jpg">
                 </a>
             </div>
             <div class="text">
                 <h1>Músicos</h1>
-                <P> Más de 300 hermanos y hermanas forman parte del Cuerpo de Guardas Voluntarios. Están debidamente
-                    uniformados y adiestrados para prestar servicio de vigilancia y mantener el orden en la comunidad.
-                    No utilizan ningún tipo de arma, ya que son servidores de paz. Además, tienen un cuartel y una
-                    patrulla que circula de noche y que se dedica a la supervisión de los puestos de vigilancia en el
-                    área donde la Congregación tiene sus dependencias. Trabajan en coordinación con la policía.</P>
+                <P> A través de la música se lleva el mensaje a las almas, trayéndoles paz, alegría y bendición. El
+                    ministerio de la música se compone de hermanos consagrados y de buen testimonio que se desempeñan en
+                    las diferentes agrupaciones musicales de la congregación.
+                    El músico es parte de las participaciones musicales de los servicios religiosos, vigilias,
+                    conciertos, actividades especiales, servicios al aire libre, entre otros.
+                </P>
             </div>
-            
+
         </div>
     </section>
 
@@ -256,28 +249,36 @@
                 </P>
             </div>
             <div class="bandCarousel">
-                <a href="../Fotos/Guardas/74.jpg"data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/74.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/74.jpg">
                 </a>
             </div>
             <h1 class="galleryH1">Galería</h1>
+            <div class="galleryInfo">Toca foto para ver más</div>
             <div class="gallery">
-                <a href="../Fotos/Guardas/75.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/75.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/75.jpg">
                 </a>
-                <a href="../Fotos/Guardas/72.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/72.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/72.jpg">
                 </a>
-                <a href="../Fotos/Guardas/73.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/73.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/73.jpg">
                 </a>
-                <a href="../Fotos/Guardas/76.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/76.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/76.jpg">
                 </a>
-                <a href="../Fotos/Guardas/70.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/70.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/70.jpg">
                 </a>
-                <a href="../Fotos/Guardas/71.jpg" data-lightbox="models" data-title="">
+                <a href="../Fotos/Guardas/71.jpg" data-lightbox="models"
+                    data-title="Izquierda anterior - Derecha siguiente">
                     <img src="../Fotos/Guardas/71.jpg">
                 </a>
             </div>
